[package]
name = "yuque-ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yuque-rust = { git = "https://github.com/Lzzzzzt/yuque-rust.git" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
pinyin = "0.9.0"
regex = "1.7.1"
derive_builder = "0.12"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
comrak = "0.16.0"
url = "2.3.1"
actix-web = "4.3.1"
actix-files = "0.6.2"




